2000-11-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Builtins): Comment `true'.

2000-11-14  Akim Demaille  <akim@epita.fr>

	* BUGS: New file.
	Be sure to read this file if you're using a non released Autoconf.
	* tests/tools.at (Syntax of the scripts): The non built tools are
	in `$top_srcdir', not `..'.
	(autoconf --trace): When using `-i' we need the src tree, not the
	build tree.

2000-11-14  Akim Demaille  <akim@epita.fr>

	A single m4_require is enough.

	* m4sugar.m4 (_m4_require): $2 defaults to $1.
	Rename as...
	(m4_require): this.
	* acgeneral.m4 (_AC_REQUIRE): Remove, use m4_require if you want
	to get into the gory details.

2000-11-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_DEFAULTS_ENVIRONMENT): Rename as...
	* m4sh.m4 (AS_SHELL_SANITIZE): this.

2000-11-14  Akim Demaille  <akim@epita.fr>

	* tests/atspecific.m4 (_AT_CHECK_AC_MACRO): Don't neutralize
	autoconf's warnings.

2000-11-14  Akim Demaille  <akim@epita.fr>

	Set AC_LANG_PREPROC_REQUIRE which replaces AC_REQUIRE_CPP.
	The main difference is that the former requires AC_LANG_COMPILER.

	* aclang (AC_LANG_PREPROC, AC_LANG_PREPROC(C), AC_LANG_PREPROC(C++))
	(AC_LANG_PREPROC(Fortran 77), AC_LANG_PREPROC_REQUIRE): New
	macros.  Issue a warning when looking for the Fortran 77
	preprocessor instead of an error.
	(AC_LANG_COMPILER): Check that it is run before the corresponding
	AC_LANG_PREPROC.
	(AC_PROG_C
	(AC_LANG_COMPILER_REQUIRE): Don't call directly
	AC_LANG_COMPILER(_AC_LANG), rather invoke AC_LANG_COMPILER so that
	the generic code in AC_LANG_COMPILER is run.
	(AC_REQUIRE_CPP): Use AC_LANG_PREPROC_REQUIRE.
	(AC_PROG_CC, AC_PROG_CXX): Don't require being run before the
	corresponding AC_LANG_PREPROC: AC_LANG_COMPILER does it.


	Propagate AC_LANG_PREPROC_REQUIRE.

	* acgeneral.m4 (AC_TRY_CPP, AC_EGREP_CPP): Use it instead of
	AC_REQUIRE_CPP.
	* acspecific.m4 (_AC_DECL_YYTEXT, AC_PATH_X): Don't
	AC_REQUIRE_CPP, inner macro will do it.