@@ -35,6 +35,7 @@ AT_CHECK_MACRO([AC_FUNC_CHOWN])
 AT_CHECK_MACRO([AC_FUNC_CLOSEDIR_VOID])
 AT_CHECK_MACRO([AC_FUNC_ERROR_AT_LINE])
 AT_CHECK_MACRO([AC_FUNC_FNMATCH])
+AT_CHECK_MACRO([AC_FUNC_FSEEKO])
 AT_CHECK_MACRO([AC_FUNC_GETGROUPS])
 AT_CHECK_MACRO([AC_FUNC_GETLOADAVG])
 AT_CHECK_MACRO([AC_FUNC_GETMNTENT])
