@@ -1,3 +1,13 @@
+2000-11-14  Paul Eggert  <eggert@twinsun.com>
+
+	* acspecific.m4 (AC_SYS_LARGEFILE): Don't worry about
+	whether fseeko and ftello are properly declared.
+	* acfunctions.m4 (AC_FUNC_FSEEKO): New macro, which worries about
+	fseeko (and presumably ftello).  Do not set _XOPEN_SOURCE; that
+	causes too many problems in practice.
+	* acfunctions (fteelo, fseeko): Trigger AC_FUNC_FSEEKO.
+	* doc/autoconf.texi: Adjust.
+
 2000-11-14  Akim Demaille  <akim@epita.fr>
 
 	* doc/autoconf.texi (Limitations of Builtins): Comment `true'.
